--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-geolocation-api": "^0.1.21",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
