--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue-leaflet/vue-leaflet": "^0.6.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "vue": "^3.0.0",
